v3.7.7 (XXXX-XX-XX)
-------------------

* Added the following bit handling functions to AQL:

  - BIT_AND(array): and-combined result
  - BIT_OR(array): or-combined result
  - BIT_XOR(array): xor-combined result
  - BIT_NEGATE(value, bits): bitwise negation of `value`, with a mask of `bits`
    length
  - BIT_TEST(value, index): test if bit at position `index` is set in `value`
    (indexes are 0-based)
  - BIT_POPCOUNT(value): return number of bits set in `value`
  - BIT_SHIFT_LEFT(value, shift, bits): bitwise shift-left of `value` by `shift`
    bits, with a mask of `bits` length
  - BIT_SHIFT_RIGHT(value, shift, bits): bitwise shift-right of `value` by
    `shift` bits, with a mask of `bits` length
  - BIT_CONSTRUCT(array): construct a number with bits set at the positions
    given in the array
  - BIT_DECONSTRUCT(value): deconstruct a number into an array of its individual
    set bits
  - BIT_TO_STRING(value): create a bitstring representation from numeric `value`
  - BIT_FROM_STRING(value): parse a bitstring representation into a number

  `BIT_AND`, `BIT_OR` and `BIT_XOR` are also available as aggregate functions
  for usage inside COLLECT AGGREGATE.

  All above bit operations support unsigned integer values with up to 32 bits.
  Using values outside the supported range will make any of these bit functions
  return `null` and register a warning.

* Add binary (base 2) and hexadecimal (base 16) integer literals to AQL.
  These literals can be used where regular (base 10) integer literal can used.
  The prefix for binary integer literals is `0b`, e.g. `0b10101110`.
  The prefix for hexadecimal integer literals i `0x`, e.g. `0xabcdef02`.

  Binary and hexadecimal integer literals can only be used for unsigned
  integers.
  The maximum supported value is `(2 ^ 32) - 1`, i.e. `0xffffffff` (hexadecimal)
  or `0b11111111111111111111111111111111` (binary).

* Print a version mismatch (major/minor version difference) between the arangosh